# iris

./: .gitignore  README.md
.claude/: settings.json
.claude/review/: config.json
_bmad-output/implementation-artifacts/: 1-1-initialisation-du-projet-avec-le-starter-officiel-compose.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  implementation-readiness-report-2026-03-22.md  prd-validation-report.md  prd.md  ux-design-directions.html  ux-design-specification.md  ux-explorer-preview.html
_bmad-output/planning-artifacts/epics/: epic-1-fondations-projet-authentification-scurise.md  epic-2-import-analyse-de-fichiers-gest.md  epic-3-visualisation-structure-navigation.md  epic-4-dition-scurise-export-gest.md  epic-5-comparaison-multi-fichiers-export-rapport.md  epic-list.md  index.md  overview.md  requirements-inventory.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: architecture_securite.md  rust_ts.md  ux_recherche.md
iris/: .gitignore  CLAUDE.md  README.md  components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
iris/dist-isolation/: index.html
iris/src/: app.css  app.html
iris/src-tauri/: Cargo.toml  tauri.conf.json
iris/src-tauri/capabilities/: main-window.json
iris/src-tauri/src/: lib.rs  main.rs
iris/src/routes/: +layout.svelte  +page.svelte
(+7 files in other folders)
