[package]
name = "iris"
version = "0.1.0"
description = "IRIS - Outil desktop d'analyse et comparaison de fichiers GEST"
authors = ["IRIS Research"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["isolation"] }
tauri-plugin-log = "2.5"
thiserror = "2"
